fix:edit overflow-x, avoid scrolling horizontally

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ body, button {
   position: relative;
   width: 100%;
   max-width: 30rem;
+  display: flex;
 }
 .search-box .search-icon {
   position: absolute;
@@ -356,6 +357,7 @@ input {
   grid-template-columns: 24rem 1fr;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
+  overflow-x: hidden;
   background-color: #efefef;
 }
 
@@ -411,6 +413,11 @@ input {
   align-items: center;
   justify-content: flex-end;
   padding: 0 3rem;
+}
+
+.right-side-header {
+  display: flex;
+  margin-left: auto;
 }
 
 .main-aside {
@@ -499,7 +506,7 @@ input {
   border: none;
   border-radius: 0.8rem;
   padding: 0.8rem 1.2rem;
-  margin: 1rem;
+  margin: 2rem 1rem;
   font-size: 1.6rem;
   font-weight: 500;
   cursor: pointer;
