--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -5,6 +5,7 @@
     position: relative;
     width: 100%;
     max-width: 30rem; 
+    display: flex;
 
     .search-icon {
         position: absolute;
